Fix manifest.json icon paths - change absolute paths to relative paths

--- a/manifest.json
+++ b/manifest.json
@@ -12,19 +12,19 @@
   "categories": ["lifestyle", "health", "magazine", "business"],
   "icons": [
     {
-      "src": "/Complan/favicons_folder/android-chrome-192x192.png",
+      "src": "./Complan/favicons_folder/android-chrome-192x192.png",
       "sizes": "192x192",
       "type": "image/png",
       "purpose": "any maskable"
     },
     {
-      "src": "/Complan/favicons_folder/android-chrome-512x512.png",
+      "src": "./Complan/favicons_folder/android-chrome-512x512.png",
       "sizes": "512x512",
       "type": "image/png",
       "purpose": "any maskable"
     },
     {
-      "src": "/Complan/favicons_folder/favicon.ico",
+      "src": "./Complan/favicons_folder/favicon.ico",
       "sizes": "48x48",
       "type": "image/x-icon",
       "purpose": "any"
@@ -38,7 +38,7 @@
       "url": "./Complan/index.html",
       "icons": [
         {
-          "src": "/Complan/favicons_folder/android-chrome-192x192.png",
+          "src": "./Complan/favicons_folder/android-chrome-192x192.png",
           "sizes": "192x192"
         }
       ]
@@ -50,7 +50,7 @@
       "url": "./Products/index.html",
       "icons": [
         {
-          "src": "/Products/favicons_folder/android-chrome-192x192.png",
+          "src": "./Products/favicons_folder/android-chrome-192x192.png",
           "sizes": "192x192"
         }
       ]
