Fix Vercel configuration - remove build process for static site deployment

--- a/vercel.json
+++ b/vercel.json
@@ -1,15 +1,6 @@
 {
   "name": "rx-success-academy-frontend",
   "version": 2,
-  "builds": [
-    {
-      "src": "package.json",
-      "use": "@vercel/static-build",
-      "config": {
-        "distDir": "dist"
-      }
-    }
-  ],
   "routes": [
     {
       "src": "/sw.js",
@@ -25,15 +16,12 @@
       }
     },
     {
+      "src": "/(.*\\.html)$",
+      "dest": "/$1"
+    },
+    {
       "src": "/(.*)",
-      "dest": "/$1",
-      "headers": {
-        "X-Content-Type-Options": "nosniff"
-      }
+      "dest": "/$1"
     }
-  ],
-  "env": {
-    "VITE_API_URL": "https://rx-magazine-backend.onrender.com",
-    "VITE_NODE_ENV": "production"
-  }
+  ]
 }
